argocd/argocd_helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
